css fix: search result resv filter tags floating css fix: create/join resv: user info email tag too short, shouldn't change line bug fix: after terminate demand in personal space, page didn't refresh bug fix: switch language after login, cannot show login user name

--- a/static/css/reservation_create.css
+++ b/static/css/reservation_create.css
@@ -181,7 +181,7 @@ a {
 }
 
 #reservation-create-bg-image > div.reservation_detail > div.join_input_div > div.vos_information > div:nth-child(3) > div > div {
-    width: 20%;
+    /*width: 20%;*/
     float: left;
 }
 
