--- a/static/css/search_result.css
+++ b/static/css/search_result.css
@@ -330,27 +330,39 @@ a {
     margin-left: 5%;
 }
 
-#search-result-bg-image > div.search_resv_filters > div:nth-child(1) > div {
-    float: left;
-}
-
 #search-result-bg-image > div.search_resv_filters > div:nth-child(1) > div:nth-child(1) {
     font-size: 20px;
     font-weight: bold;
+    float: left;
+    width: 20%;
 }
 
-#search-result-bg-image > div.search_resv_filters > div:nth-child(1) > div:nth-child(4) {
-    /* filter tag: archive type */
-    margin-left: 290px;
+#search-result-bg-image > div.search_resv_filters > div:nth-child(1) > div:nth-child(2) {
+    font-size: 20px;
+    float: left;
     margin-top: 5px;
 }
 
-#search-result-bg-image > div.search_resv_filters > div:nth-child(1) > div:nth-child(5) {
-    /* filter tag: number of demand archive */
+#search-result-bg-image > div.search_resv_filters > div:nth-child(1) > div:nth-child(2) > div {
+    float: left;
+}
+
+#search-result-bg-image > div.search_resv_filters > div:nth-child(1) > div:nth-child(3) {
+    clear: both;
+    margin-left: 20%;
+    width: 100%;
+}
+
+#search-result-bg-image > div.search_resv_filters > div:nth-child(1) > div:nth-child(3) > div {
+    float: left;
     margin-top: 5px;
 }
 
-#search-result-bg-image > div.search_resv_filters > div:nth-child(1) > div:nth-child(5) > span:nth-child(2) {
+#search-result-bg-image > div.search_resv_filters > div:nth-child(1) > div:nth-child(3) > div:nth-child(1) {
+    width: 25%;
+}
+
+#search-result-bg-image > div.search_resv_filters > div:nth-child(1) > div:nth-child(3) > div:nth-child(2) > span:nth-child(2) {
     /* filter tag number of demand archive: button x */
     cursor: pointer;
 }
